# opencxl-core

./: .gitignore  LICENSE  Makefile  README.md  cxl-util  pyproject.toml  test-host-t3-uncached.py  test-host.py
configs/: 1vcs_1mld+2sld.yaml  1vcs_1mld_2lds.yaml  1vcs_1mld_4lds.yaml  1vcs_2mlds.yaml  1vcs_2mlds_unbound.yaml  1vcs_4sld.yaml  1vcs_4sld_2mlds.yaml  1vcs_8sld_unbound.yaml  2vcs_1mld.yaml  2vcs_2mld.yaml  2vcs_8sld.yaml
demo/: accel.py  chost.py  demo_run.py  switch.py
demos/: accel.py  chost.py  demo_t1_run.py  switch.py
docker/: Dockerfile-ci  Dockerfile-dev  Dockerfile-svc
linter/: exception_logger.py
opencis/: cpu.py
opencxl/: cpu.py
tests/: conftest.py  regvals.txt  test_cxl_complex_host.py  test_cxl_component_hdm_decoder.py  test_cxl_component_physical_port_manager.py  test_cxl_component_switch_connection_manager.py  test_cxl_component_switch_connection_manager.py.rej  test_cxl_component_virtual_switch.py  test_cxl_component_virtual_switch_manager.py  test_cxl_device_downstream_port.py  test_cxl_device_multi_logical_device.py  test_cxl_device_multihead_single_logical_device.py  test_cxl_device_multiheaded_single_logical_device.py  test_cxl_device_single_logical_device.py  test_cxl_device_type1_device.py  test_cxl_device_type2_device.py  test_cxl_device_upstream_port.py  test_cxl_doe_table_access.py  test_cxl_host.py  test_cxl_image_classification_host.py  test_cxl_mailbox.py  test_cxl_mmio.py  test_cxl_mmio_cachemem_register.py  test_cxl_mmio_component_register.py  test_cxl_mmio_device_register.py  test_dynamic_fields.py  test_pcie_doe.py  (+7 more)
(+364 files in other folders)
