[tool.poetry]
name = "opencxl"
version = "0.1.0"
description = "OpenCXL"
authors = ["Paul Kang", "Kyeyoon Park"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "opencxl"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
humanfriendly = "^10.0"
pyyaml = "^6.0.1"
python-socketio = "^5.10.0"
aiohttp = "^3.8.6"
python-libpcap = "^0.4.2"
pytest-timeout = "^2.2.0"
scapy = "^2.5.0"
dill = "^0.3.7"
pytest-xdist = "^3.5.0"
websockets = "^12.0"
jsonrpcserver = "^5.0.9"
jsonrpcclient = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
pylint = "3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
timeout = 20
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.pylint.main]
disable = [
  "logging-fstring-interpolation",
  "missing-function-docstring",
  "missing-class-docstring",
  "pointless-string-statement",
  "too-many-arguments",
  "too-many-branches",
  "broad-exception-raised",
  "broad-exception-caught",
  "redefined-builtin",
  "too-many-locals",
  "invalid-name",
  "fixme",
  "too-many-lines",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-few-public-methods",
  "unspecified-encoding",
  "disallowed-name",
  "too-many-statements",
]
jobs = 4
